--- a/yonetim.html
+++ b/yonetim.html
@@ -72,75 +72,152 @@
 
 
 
-<!--Slider-->
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-  <!-- Wrapper for slides -->
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-sm-12">
-       <div class="carousel-inner">
-          <div class="item active">
-            <img src="images/1111.jpg" alt="" style="width:100%">
-          </div>
-
-        <div class="item">
-           <img src="images/2222.jpg" alt="" style="width:100%">
-        </div>
-
-        <div class="item">
-           <img src="images/3333.jpg" alt="" style="width:100%">
-        </div>
-
-        <div class="item">
-           <img src="images/4444.jpg" alt="" style="width:100%">
-        </div>
-
-    <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </div>
-  </div>
-</div>
-<!--Slider end-->
 
 <!--Content-->
-<div class="container">
-  <div class="row">
-    <div id="parent" class="col-sm-4">
-      <div class="thumbnail">
-      <a href="images/boss.jpg" target="blank">
-      <img src="images/boss.jpg" class="img-rounded" alt="baskan" width="300" height="170">
-        <div class="caption">
-            <p id="name">Başkan <br> Nihat Coşkun</p>
-          </div>
-        </a>
-      </div>
-    </div>
+<h2>Anadolu yakası aslancami derneği yönetim ve üyeleri</h2>
+<br>
 
-    <div class="col-sm-8">
-      <br>
-      <p>
-        Merhaba</p>
-        <br>
-        <p>Derneğimiz 2015 yılında Aslancamii köyü ve mahallelerinden dernekleşmenin önemini bilen hizmet gönüllüleri tarafından kurulmuştur.
-        Derneğimiz ilke olarak yardımlaşma ve dayanışmayı görev bilmiştir.
-        Dernek yönetim kurulu, üyeleri ve ayleleri derneğimizin gelişiminde önemli katkıları olmuştur.
-        Derneğimiz sosyal bir dernek olarak büyümeye devam edecektir.
-        Saygılarımla.</p>
-        <br>
-        <p>Herşey Türkiye için</p>
-      </p>
-      <br>
-    </div>
+<div class="container">
+  <div class="table-responsive">
+  <table class="table">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Kurucu yönetim</th>
+        <th>#</th>
+        <th>Yönetim kurulu</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>Nihat Coşkun</td>
+        <td>1</td>
+        <td>Nihat Coşkun</td>
+      </tr>
+
+      <tr>
+        <td>2</td>
+        <td>Zati Ayduvan</td>
+        <td>2</td>
+        <td>Zati Ayduvan</td>
+      </tr>
+
+      <tr>
+        <td>3</td>
+        <td>Üstün Coşkun</td>
+        <td>3</td>
+        <td>Üstün Coşkun</td>
+      </tr>
+
+      <tr>
+        <td>4</td>
+        <td>Sadettin Korkmaz</td>
+        <td>4</td>
+        <td>Sadettin Korkmaz</td>
+      </tr>
+
+      <tr>
+        <td>5</td>
+        <td>Vasıf Emir</td>
+        <td>5</td>
+        <td>Vasıf Emir</td>
+      </tr>
+
+      <tr>
+        <td>6</td>
+        <td>Şinasi Altun</td>
+        <td>6</td>
+        <td>Şinasi Altun</td>
+      </tr>
+
+      <tr>
+        <td>7</td>
+        <td>Birol Aydoğan</td>
+        <td>7</td>
+        <td>Birol Aydoğan</td>
+      </tr>
+
+      <tr>
+        <td>8</td>
+        <td>Rasul Coşkun</td>
+        <td>8</td>
+        <td>Rasul Coşkun</td>
+      </tr>
+
+      <tr>
+        <td>9</td>
+        <td>Özlem Aydemir</td>
+        <td>9</td>
+        <td>Özlem Aydemir</td>
+      </tr>
+
+      <tr>
+        <td>10</td>
+        <td>Ahmet Ayduvan</td>
+        <td>10</td>
+        <td>Ahmet Ayduvan</td>
+      </tr>
+
+      <tr>
+        <td>11</td>
+        <td></td>
+        <td>11</td>
+        <td>Mehmet Korkmaz</td>
+      </tr>
+
+      <tr>
+        <td>12</td>
+        <td></td>
+        <td>12</td>
+        <td>Sezai Coşkun</td>
+      </tr>
+
+      <tr>
+        <td>13</td>
+        <td></td>
+        <td>13</td>
+        <td>Sebahattin Bahçeci</td>
+      </tr>
+
+      <tr>
+        <td>14</td>
+        <td></td>
+        <td>14</td>
+        <td>Mustafa Bahçeci</td>
+      </tr>
+
+      <tr>
+        <td>15</td>
+        <td></td>
+        <td>15</td>
+        <td>Mustafa Coşkun</td>
+      </tr>
+
+      <tr>
+        <td>16</td>
+        <td></td>
+        <td>16</td>
+        <td>Ayşe Emir</td>
+      </tr>
+
+      <tr>
+        <td>17</td>
+        <td></td>
+        <td>17</td>
+        <td>Zeki Emir</td>
+      </tr>
+
+      <tr>
+        <td>18</td>
+        <td></td>
+        <td>18</td>
+        <td>Tahsin Emir</td>
+      </tr>
+
+    </tbody>
+  </table>
   </div>
 </div>
 
