add htasses and more

--- a/iletisim.html
+++ b/iletisim.html
@@ -12,7 +12,7 @@
 
   <link href="css/style.css" rel="stylesheet">
 
-<link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
 
   <link rel="shortcut icon" href="images/fav/fav.ico" type="image/x-icon">
 
@@ -70,187 +70,21 @@
   </div>
 </div>
 
-
-
-
-
 <!--Content-->
 
-<div class="container">
-  <h2>Galeri</h2>
-  <br>
-  <div class="row">
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f/1.jpg" target="_blank">
-          <img src="images/f/1.jpg" alt="Lights" style="width:100%">
-          <div class="caption">
-            <p>TV52 Zamansız yağmurlar programı</p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f/2.jpg" target="_blank">
-          <img src="images/f/2.jpg" alt="Nature" style="width:100%">
-          <div class="caption">
-            <p></p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f/3.jpg" target="_blank">
-          <img src="images/f/3.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p></p>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-
+ <div id="cont" class="container">
     <div class="row">
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f/4.jpg" target="_blank">
-          <img src="images/f/4.jpg" alt="Lights" style="width:100%">
-          <div class="caption">
-            <p></p>
-          </div>
-        </a>
+      <div class="col-sm-12">
+        <p><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</p>
+
+        <p>email@gmail.com</p>
+
+        <p>Dumlupınar mah Ordu sok №19 Pendik/Istanbul</p>
+        <br>
+
       </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f/5.jpg" target="_blank">
-          <img src="images/f/5.jpg" alt="Nature" style="width:100%">
-          <div class="caption">
-            <p></p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f/6.jpg" target="_blank">
-          <img src="images/f/6.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p></p>
-          </div>
-        </a>
-      </div>
-    </div>
   </div>
-
-  <div class="row">
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f/7.jpg" target="_blank">
-          <img src="images/f/7.jpg" alt="Lights" style="width:100%">
-          <div class="caption">
-            <p></p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f/8.jpg" target="_blank">
-          <img src="images/f/8.jpg" alt="Nature" style="width:100%">
-          <div class="caption">
-            <p></p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f/9.jpg" target="_blank">
-          <img src="images/f/9.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p></p>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f10.jpg" target="_blank">
-          <img src="images/f/10.jpg" alt="Lights" style="width:100%">
-          <div class="caption">
-            <p></p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f/11.jpg" target="_blank">
-          <img src="images/f/11.jpg" alt="Nature" style="width:100%">
-          <div class="caption">
-            <p></p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f/12.jpg" target="_blank">
-          <img src="images/f/12.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p></p>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-
-    <div class="row">
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f13.jpg" target="_blank">
-          <img src="images/f/13.jpg" alt="Lights" style="width:100%">
-          <div class="caption">
-            <p></p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f/14.jpg" target="_blank">
-          <img src="images/f/14.jpg" alt="Nature" style="width:100%">
-          <div class="caption">
-            <p></p>
-          </div>
-        </a>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="thumbnail">
-        <a href="images/f/15.jpg" target="_blank">
-          <img src="images/f/15.jpg" alt="Fjords" style="width:100%">
-          <div class="caption">
-            <p></p>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-
-
 </div>
-
-</body>
-</html>
-
-
 
 <!--Footer-->
 <br>
