--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </li>
       <li><a href="yonetim.html">Yönetim ve Üyeler</a></li>
       <li><a href="galery.html">Galeri</a></li>
-      <li><a href="#">İletişim</a></li>
+      <li><a href="iletisim.html">İletişim</a></li>
       <li><a href="bmesaji.html">Başkanın mesajı</a></li>
     </ul>
   </div>
@@ -137,7 +137,7 @@
         Derneğimiz sosyal bir dernek olarak büyümeye devam edecektir.
         Saygılarımla.</p>
         <br>
-        <p>Herşey Türkiye için</p>
+        <p>Herşey Aslancami için</p>
       </p>
       <br>
     </div>
@@ -188,7 +188,7 @@
 
         <p><a href="mailto:email@gmail.com" id="email">email@gmail.com</a></p>
 
-        <p>Dumlupınar mah Ordu sok №19 Pendik</p>
+        <p>Dumlupınar mah Ordu sok №19 Pendik/Istanbul</p>
         <br>
 
       </div>
@@ -206,9 +206,21 @@
         <img src="images/soz/u.png" alt="f">
       </a>
 
-      </div>
+    </div>
 
+</div>
+</div>
+</div>
+
+<div id="avtor" class="container-fluid">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <p>Made by Olga Coşkun</p>
+      </div>
+    </div>
   </div>
+</div>
 
 </body>
 </html>
