--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-2">
-      <a href="index.html"><img src="images/logo150.png" class="img-responsive" alt="Responsive image" id="logo"></a>
+      <a href="index.html"><img src="images/logo150.png" class="img-responsive center-block" alt="Responsive image" id="logo"></a>
     </div>
 
     <div class="col-sm-10">
@@ -153,25 +153,25 @@
   <br>
   <div id="footer4" class="container">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-xs-6 col-sm-3">
         <a href="http://www.fatsa.gov.tr/" target="blank">
         <img src="images/icon/1.png" alt="fatsagov" width="100" height="100">
         </a>
       </div>
 
-       <div class="col-sm-3">
+       <div class="col-xs-6 col-sm-3">
         <a href="http://www.fatsa.bel.tr/" target="blank">
         <img src="images/icon/2.png" alt="fatsagov" width="100" height="100">
       </a>
       </div>
 
-       <div class="col-sm-3">
+       <div class="col-xs-6 col-sm-3">
         <a href="http://www.ordu.bel.tr/" target="blank">
         <img src="images/icon/3.png" alt="fatsagov" width="100" height="100">
       </a>
       </div>
 
-       <div class="col-sm-3">
+       <div class="col-xs-6 col-sm-3">
         <a href="http://www.ordu.gov.tr/" target="blank">
         <img src="images/icon/4.png" alt="fatsagov" width="100" height="100">
       </a>
@@ -186,27 +186,27 @@
 <div id="footer" class="container-fluid">
   <div id="footer2" class="container">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-sm-6 col-md-6">
         <p><a href="tel:+905384715252" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</a></p>
 
-        <p><a href="mailto:email@gmail.com" id="email">email@gmail.com</a></p>
+        <p><a href="mailto:ustuncoskun2476@gmail.com" id="email"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i> ustuncoskun2476@gmail.com</a></p>
 
-        <p>Dumlupınar mah Ordu sok №19 Pendik/Istanbul</p>
+        <p><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i> Dumlupınar mah Ordu sok №19 Pendik/Istanbul</p>
         <br>
 
       </div>
 
-      <div class="col-sm-3">
+      <div id="p" class="col-sm-6 col-md-6">
         <a href="https://www.facebook.com/groups/961187180582440/?fref=nf" target="blank">
-        <img src="images/soz/f.png" alt="f">
+        <img id="s1" src="images/soz/f.png" alt="f">
       </a>
 
        <a href="https://www.twitter.com" target="blank">
-        <img src="images/soz/t.png" alt="f">
+        <img id="s2" src="images/soz/t.png" alt="t">
       </a>
 
        <a href="https://www.youtube.com" target="blank">
-        <img src="images/soz/u.png" alt="f">
+        <img id="3" src="images/soz/u.png" alt="u">
       </a>
 
     </div>
