--- a/iletisim.html
+++ b/iletisim.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <meta name="keywords" content="aslancamikoyudernegi, Ordu, Fatsa, Anadolu, Yakası, Aslancami, Köyü, Derneği">
+  <meta name="description" content="Ordu Fatsa Anadolu Yakası Aslancami Köyü Derneği">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -17,13 +20,13 @@
   <link rel="shortcut icon" href="images/fav/fav.ico" type="image/x-icon">
 
     <link rel="apple-touch-icon" sizes="57x57" href="images/fav/57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="mages/fav/114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="mages/fav/72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="mages/fav/144.png">
-    <link rel="apple-touch-icon" sizes="60x560" href="mages/fav/60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="mages/fav/120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="mages/fav/76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="mages/fav/152.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="images/fav/114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="images/fav/72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="images/fav/144.png">
+    <link rel="apple-touch-icon" sizes="60x560" href="images/fav/60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="images/fav/120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="images/fav/76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="images/fav/152.png">
 
   <title>Ordu Fatsa Anadolu Yakası Aslancami Köyü Derneği</title>
 
