--- a/galery.html
+++ b/galery.html
@@ -245,6 +245,173 @@
         </a>
       </div>
     </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/16.jpg" target="_blank">
+          <img src="images/f/16.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/17.jpg" target="_blank">
+          <img src="images/f/17.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/18.jpg" target="_blank">
+          <img src="images/f/18.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/19.jpg" target="_blank">
+          <img src="images/f/19.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/20.jpg" target="_blank">
+          <img src="images/f/20.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/21.jpg" target="_blank">
+          <img src="images/f/21.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/22.jpg" target="_blank">
+          <img src="images/f/22.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/23.jpg" target="_blank">
+          <img src="images/f/23.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/24.jpg" target="_blank">
+          <img src="images/f/24.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/25.jpg" target="_blank">
+          <img src="images/f/25.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/26.jpg" target="_blank">
+          <img src="images/f/26.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/27.jpg" target="_blank">
+          <img src="images/f/27.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/28.jpg" target="_blank">
+          <img src="images/f/28.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/29.jpg" target="_blank">
+          <img src="images/f/29.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/f/30.jpg" target="_blank">
+          <img src="images/f/30.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Beşiktaş belediyesi İstanbul turu</p>
+          </div>
+        </a>
+      </div>
+    </div>
+
+
   </div>
 
 
