--- a/yonetim.html
+++ b/yonetim.html
@@ -86,137 +86,152 @@
   <table class="table">
     <thead>
       <tr>
-        <th>#</th>
+        <th></th>
         <th>Kurucu yönetim</th>
-        <th>#</th>
+        <th></th>
         <th>Yönetim kurulu</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>1</td>
-        <td>Nihat Coşkun</td>
-        <td>1</td>
-        <td>Nihat Coşkun</td>
-      </tr>
-
-      <tr>
-        <td>2</td>
-        <td>Zati Ayduvan</td>
-        <td>2</td>
-        <td>Zati Ayduvan</td>
-      </tr>
-
-      <tr>
-        <td>3</td>
-        <td>Üstün Coşkun</td>
-        <td>3</td>
-        <td>Üstün Coşkun</td>
-      </tr>
-
-      <tr>
-        <td>4</td>
-        <td>Sadettin Korkmaz</td>
-        <td>4</td>
-        <td>Sadettin Korkmaz</td>
-      </tr>
-
-      <tr>
-        <td>5</td>
-        <td>Vasıf Emir</td>
-        <td>5</td>
-        <td>Vasıf Emir</td>
-      </tr>
-
-      <tr>
-        <td>6</td>
-        <td>Şinasi Altun</td>
-        <td>6</td>
-        <td>Şinasi Altun</td>
-      </tr>
-
-      <tr>
-        <td>7</td>
-        <td>Birol Aydoğan</td>
-        <td>7</td>
-        <td>Birol Aydoğan</td>
-      </tr>
-
-      <tr>
-        <td>8</td>
-        <td>Rasul Coşkun</td>
-        <td>8</td>
-        <td>Rasul Coşkun</td>
-      </tr>
-
-      <tr>
-        <td>9</td>
-        <td>Özlem Aydemir</td>
-        <td>9</td>
-        <td>Özlem Aydemir</td>
-      </tr>
-
-      <tr>
-        <td>10</td>
-        <td>Ahmet Ayduvan</td>
-        <td>10</td>
-        <td>Ahmet Ayduvan</td>
-      </tr>
-
-      <tr>
-        <td>11</td>
         <td></td>
-        <td>11</td>
+        <td>Nihat Coşkun</td>
+        <td></td>
+        <td>Nihat Coşkun</td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td>Zati Ayduvan</td>
+        <td></td>
+        <td>Zati Ayduvan</td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td>Üstün Coşkun</td>
+        <td></td>
+        <td>Serdar Aslan</td>
+      </tr>
+
+
+      <tr>
+        <td></td>
+        <td>Sadettin Korkmaz</td>
+        <td></td>
+        <td>Sadettin Korkmaz</td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td>Vasıf Emir</td>
+        <td></td>
+        <td>Vasıf Emir</td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td>Şinasi Altun</td>
+        <td></td>
+        <td>Mehmet Ayduvan</td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td>Birol Aydoğan</td>
+        <td></td>
+        <td>Şinasi Altun</td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td>Rasul Coşkun</td>
+        <td></td>
+        <td>Birol Aydoğan</td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td>Özlem Ayduvan</td>
+        <td></td>
+        <td>Nail Bakır</td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td>Ahmet Ayduvan</td>
+        <td></td>
+        <td>Rasul Coşkun</td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td>Celal Töngel</td>
+        <td></td>
+        <td>Erol Duman</td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td>Uğur Ayduvan</td>
+        <td></td>
         <td>Mehmet Korkmaz</td>
       </tr>
 
       <tr>
-        <td>12</td>
         <td></td>
-        <td>12</td>
+        <td>Özlem Ayduvan</td>
+        <td></td>
         <td>Sezai Coşkun</td>
       </tr>
 
       <tr>
-        <td>13</td>
         <td></td>
-        <td>13</td>
+        <td></td>
+        <td></td>
         <td>Sebahattin Bahçeci</td>
       </tr>
 
       <tr>
-        <td>14</td>
         <td></td>
-        <td>14</td>
+        <td></td>
+        <td></td>
         <td>Mustafa Bahçeci</td>
       </tr>
 
       <tr>
-        <td>15</td>
         <td></td>
-        <td>15</td>
+        <td></td>
+        <td></td>
         <td>Mustafa Coşkun</td>
       </tr>
 
       <tr>
-        <td>16</td>
         <td></td>
-        <td>16</td>
+        <td></td>
+        <td></td>
         <td>Ayşe Emir</td>
       </tr>
 
       <tr>
-        <td>17</td>
         <td></td>
-        <td>17</td>
+        <td></td>
+        <td></td>
         <td>Zeki Emir</td>
       </tr>
 
       <tr>
-        <td>18</td>
         <td></td>
-        <td>18</td>
+        <td></td>
+        <td></td>
         <td>Tahsin Emir</td>
+      </tr>
+
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>Üstün Coşkun</td>
       </tr>
 
     </tbody>
