--- a/iletisim.html
+++ b/iletisim.html
@@ -80,7 +80,7 @@
       <div class="col-sm-12">
         <p><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</p>
 
-        <p><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i> ustuncoskun2476@gmail.com</p>
+        <p><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i> aslancami@aslancamikoyudernegi.com.tr</p>
 
         <p><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i> Dumlupınar mah Ordu sok №19 Pendik/Istanbul</p>
 
@@ -130,7 +130,7 @@
       <div class="col-sm-6 col-md-6">
         <p><a href="tel:+905384715252" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</a></p>
 
-        <p><a href="mailto:ustuncoskun2476@gmail.com" id="email"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i> ustuncoskun2476@gmail.com</a></p>
+        <p><a href="mailto:aslancami@aslancamikoyudernegi.com.tr" id="email"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i> aslancami@aslancamikoyudernegi.com.tr</a></p>
 
         <p><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i> Dumlupınar mah Ordu sok №19 Pendik/Istanbul</p>
         <br>
