--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <br>
         <p>Derneğimiz 2015 yılında Aslancamii köyü ve mahallelerinden dernekleşmenin önemini bilen hizmet gönüllüleri tarafından kurulmuştur.
         Derneğimiz ilke olarak yardımlaşma ve dayanışmayı görev bilmiştir.
-        Dernek yönetim kurulu, üyeleri ve ayleleri derneğimizin gelişiminde önemli katkıları olmuştur.
+        Dernek yönetim kurulu, üyeleri ve aileleri derneğimizin gelişiminde önemli katkıları olmuştur.
         Derneğimiz sosyal bir dernek olarak büyümeye devam edecektir.
         Saygılarımla.</p>
         <br>
@@ -190,7 +190,7 @@
       <div class="col-sm-6 col-md-6">
         <p><a href="tel:+905384715252" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</a></p>
 
-        <p><a href="mailto:ustuncoskun2476@gmail.com" id="email"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i> ustuncoskun2476@gmail.com</a></p>
+        <p><a href="mailto:aslancami@aslancamikoyudernegi.com.tr" id="email"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i> aslancami@aslancamikoyudernegi.com.tr</a></p>
 
         <p><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i> Dumlupınar mah Ordu sok №19 Pendik/Istanbul</p>
         <br>
