--- a/yonetim.html
+++ b/yonetim.html
@@ -180,7 +180,7 @@
 
       <tr>
         <td></td>
-        <td>Özlem Ayduvan</td>
+        <td></td>
         <td></td>
         <td>Sezai Coşkun</td>
       </tr>
@@ -281,7 +281,7 @@
       <div class="col-sm-6 col-md-6">
         <p><a href="tel:+905384715252" id="telefon" class="sog"><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i> +90 538 471 52 52</a></p>
 
-        <p><a href="mailto:ustuncoskun2476@gmail.com" id="email"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i> ustuncoskun2476@gmail.com</a></p>
+        <p><a href="mailto:aslancami@aslancamikoyudernegi.com.tr" id="email"><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i> aslancami@aslancamikoyudernegi.com.tr</a></p>
 
         <p><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i> Dumlupınar mah Ordu sok №19 Pendik/Istanbul</p>
         <br>
