--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       <li><a href="galery.html">Galeri</a></li>
       <li><a href="iletisim.html">İletişim</a></li>
       <li><a href="bmesaji.html">Başkanın mesajı</a></li>
+      <li><a href="duyurular.html">Duyurular</a></li>
     </ul>
   </div>
 </nav>
@@ -85,9 +86,14 @@
   <div class="row">
     <div id="slider" class="col-sm-12">
        <div class="carousel-inner">
-          <div class="item active">
-            <img src="images/1111.jpg" alt="" style="width:100%">
-          </div>
+
+        <div class="item">
+           <img src="images/6666.jpg" alt="" style="width:60%">
+        </div>
+
+        <div class="item active">
+          <img src="images/1111.jpg" alt="" style="width:100%">
+        </div>
 
         <div class="item">
            <img src="images/2222.jpg" alt="" style="width:100%">
@@ -99,6 +105,10 @@
 
         <div class="item">
            <img src="images/4444.jpg" alt="" style="width:100%">
+        </div>
+
+        <div class="item">
+           <img src="images/5555.jpg" alt="" style="width:100%">
         </div>
 
     <!-- Left and right controls -->
