--- a/duyurular.html
+++ b/duyurular.html
@@ -87,9 +87,10 @@
 <div class="container">
   <div class="row">
 
-    <div class="col-sm-12">
+    <div class="col-sm-12" id="msg">
       <br>
         <p>
+          <span>03/12/2017</span> PAZAR GÜNÜ SAAT 10.DA HER AY GELENEKSEL OLARAK DÜZENLEDİĞİMİZ GELENEKSEL  KAVALTI PORAGRAMIMIZA AK PARTİ  İSTANBUL MİLET VEKİLİ SN İSMET UÇMA VEKİLİMİZ İST AK PARTİ  İL BAŞKAN YARDIMCISI VE ORKON BŞK ÖZLEM ÖZTEKİN VURAL BAŞKAN VE SİYAMİ ERSEK HASTANESİ MÜDÜRÜ KÜRSAT ZENGİN MÜDÜRÜMÜZ KATILIM SAĞLAYACAKLARDIR  ÜYELERİMİZİN VE YÖNETİMİMİZİN KATILIMINI BEKLİYORUZ KAVALTIYA  KATILIMINIZ İÇİN ŞİMDİDEN TEŞEKKÜR EDERİZ YÖNETİM KURULU ADINA BŞK NİHAT COŞKUN<br><hr>
           <span>29/10/2017</span> pazar günü saat 10 da her ay geleneksel olarak düzenlediğimiz kahvaltı programımıza yönetim ve üyelerimizi katılımını bekliyoruz.Misafirlerimiz gelecektir.Ayrıca yönetim kurulu toplantımız yapılacaktır.Katılımınız için şimdiden teşekkür ederim.Yönetim kurulu adına Bşk.Nihat Coşkun. Saygılarımla.
         </p>
       <br>
