--- a/galery.html
+++ b/galery.html
@@ -55,6 +55,7 @@
       <li><a href="galery.html">Galeri</a></li>
       <li><a href="iletisim.html">İletişim</a></li>
       <li><a href="bmesaji.html">Başkanın mesajı</a></li>
+      <li><a href="duyurular.html">Duyurular</a></li>
     </ul>
   </div>
 </nav>
